# Hardware-Aware-Neural-Networks

./: .gitignore  DISCLAIMER.md  README.md  demo.py  pyproject.toml  quick_start.py  requirements.txt  train.py
.github/workflows/: ci.yml
configs/: android.yaml  jetson_nano.yaml  mcu.yaml  raspberry_pi.yaml
scripts/: deploy.py
src/: __init__.py  cli.py  config.py  data.py  evaluation.py  export.py  models.py  training.py
tests/: test_models.py
