"""Project configuration and metadata."""

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hardware-aware-neural-networks"
version = "1.0.0"
description = "Hardware-aware neural networks for edge AI and IoT applications"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Edge AI Research Team", email = "research@edgeai.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.64.0",
    "pillow>=8.3.0",
    "pyyaml>=6.0",
    "omegaconf>=2.2.0",
    "onnx>=1.12.0",
    "onnxruntime>=1.12.0",
    "streamlit>=1.20.0",
    "plotly>=5.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.0.200",
    "pre-commit>=2.20.0",
]
tensorflow = [
    "tensorflow>=2.10.0",
    "tensorflow-lite>=2.10.0",
]
quantization = [
    "torch-pruning>=1.2.0",
    "nncf>=2.0.0",
    "pytorch-quantization>=2.1.0",
]
federated = [
    "flower>=1.0.0",
    "fedml>=0.7.0",
]
iot = [
    "paho-mqtt>=1.6.0",
    "kafka-python>=2.0.0",
]
signal = [
    "opencv-python>=4.6.0",
    "scikit-image>=0.19.0",
    "librosa>=0.9.0",
    "soundfile>=0.10.0",
]
mlops = [
    "mlflow>=2.0.0",
    "wandb>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/edgeai/hardware-aware-neural-networks"
Documentation = "https://hardware-aware-neural-networks.readthedocs.io"
Repository = "https://github.com/edgeai/hardware-aware-neural-networks.git"
Issues = "https://github.com/edgeai/hardware-aware-neural-networks/issues"

[project.scripts]
train-model = "src.cli:train"
export-model = "src.cli:export"
run-demo = "demo:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
